# kesspy

./: .gitignore  CHANGES.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  test.py
.github/workflows/: CI.yml  codeql.yml  release.yml
docs/: requirements.txt
docs/source/: api.rst  change_log.md  conf.py  getting_started.md  index.rst  license.rst
docs/source/_autosummary/: nasa_sbm.configuration.SatType.rst  nasa_sbm.configuration.SimulationConfiguration.rst  nasa_sbm.configuration.SimulationType.rst  nasa_sbm.configuration.rst  nasa_sbm.event.Collision.rst  nasa_sbm.event.Explosion.rst  nasa_sbm.event.rst  nasa_sbm.model.BreakupModel.rst  nasa_sbm.model.rst  nasa_sbm.rst  nasa_sbm.satellite.Satellite.rst  nasa_sbm.satellite.rst  nasa_sbm.utils.alpha.rst  nasa_sbm.utils.distribution_constant.rst  nasa_sbm.utils.mean_1.rst  nasa_sbm.utils.mean_2.rst  nasa_sbm.utils.mean_soc.rst  nasa_sbm.utils.power_law.rst  nasa_sbm.utils.rst  nasa_sbm.utils.sigma_1.rst  nasa_sbm.utils.sigma_2.rst  nasa_sbm.utils.sigma_soc.rst  nasabreakup.configuration.SatType.rst  nasabreakup.configuration.SimulationConfiguration.rst  nasabreakup.configuration.SimulationType.rst  nasabreakup.configuration.rst  nasabreakup.event.Collision.rst  nasabreakup.event.Explosion.rst  nasabreakup.event.rst  nasabreakup.model.FragmentationEvent.rst  nasabreakup.model.rst  nasabreakup.rst  nasabreakup.satellite.Satellite.rst  nasabreakup.satellite.rst  src.nasabreakup.configuration.SatType.rst  src.nasabreakup.configuration.SimulationConfiguration.rst  src.nasabreakup.configuration.SimulationType.rst  src.nasabreakup.configuration.rst  src.nasabreakup.event.Collision.rst  src.nasabreakup.event.Explosion.rst  (+17 more)
examples/: example.py  sample_config.yaml
kesspy/: event.py  model.py  satellite.py
nasa_sbm/: configuration.py  utils.py
nsbm/: Cargo.toml
nsbm/src/: am_ratio.rs  lib.rs
src/: CoordTransforms.py  am_ratio.rs  configuration.py  event.py  event.rs  lib.rs  model.py  satellite.rs
src/models/: satellite.py  tle.py
src/nasa_sbm/: configuration.py  event.py  model.py  satellite.py  utils.py
src/nasabreakup/: configuration.py  event.py  model.py  satellite.py  utils.py
src/nasabreakup/utils/: AMUtils.py  utils.py
src/utils/: utils.py
tests/: configuration_test.py  event_test.py  rustlib_test.rs  sample_config.yaml
