[package]
name = "kessler_ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kessler_ext"
crate-type = ["cdylib"]

[dependencies]
# Uses the github repo when built locally, and Crates.io when published.
kessler = { path = "../kessler" }
numpy = "0.17.1"
pyo3 = { version = "0.17.1", features = ["extension-module"] }
