[tool.poetry]
name = "kesspy"
version = "0.1.3"
description = "An implementation of the NASA Standard Breakup Model in Python"
authors = ["Reece Humphreys <reecewh@icloud.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ReeceHumphreys/kesspy"
documentation = "https://kesspy.readthedocs.io/en/latest/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ReeceHumphreys/kesspy/issues"

[tool.poetry.dependencies]
python = "^3.8.13"
maturin = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"
