[tool.poetry]
name = "kesspy"
version = "0.2.0"
description = "An implementation of the NASA Standard Breakup Model in Python"
authors = ["Reece Humphreys <reecewh@icloud.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ReeceHumphreys/kesspy"
documentation = "https://kesspy.readthedocs.io/en/latest/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ReeceHumphreys/kesspy/issues"

[tool.poetry.dependencies]
python = "^3.8.13"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.group.dev.dependencies]
maturin = "^1.3.2"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"
