[metadata]
name = nasa-breakupmodel
version = 0.0.1
author = Reece Humphreys
author_email = reecewh@icloud.com
description = An implementation of the NASA Standard Breakup Model in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ReeceHumphreys/NASA-breakup-model-python
project_urls =
    Bug Tracker = https://github.com/ReeceHumphreys/NASA-breakup-model-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src