[metadata]
name = nasabreakup
version = 0.0.1
author = Reece Humphreys
author_email = reecewh@icloud.com
description = An implementation of the NASA Standard Breakup Model in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ReeceHumphreys/NASA-breakup-model-python
project_urls =
    Bug Tracker = https://github.com/ReeceHumphreys/NASA-breakup-model-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    nasabreakup
package_dir =
    = src
python_requires = >=3.6
install_requires =
    numpy>=1
    PyYAML>=4

[options.packages.find]
where = src

[flake8]
max-line-length = 100