[metadata]
name = nasa-sbm
version = 0.0.1
author = Reece Humphreys
author_email = reecewh@icloud.com
description = An implementation of the python-sbm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ReeceHumphreys/python-sbm
project_urls =
    Bug Tracker = https://github.com/ReeceHumphreys/python-sbm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    nasa_sbm
package_dir =
    = src
python_requires = >=3.6
install_requires =
    numpy>=1
    PyYAML>=4

[options.packages.find]
where = src/nasa_sbm

[options.extras_require]
docs =
    sphinx
    myst-parser

[flake8]
max-line-length = 100
